Check and send redirect url in authenticateUser and OAuth2AuthenticationSuccessHandler for Normal login and OAuth2 login has implemented